sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:5: error: ';' expected but 'false' found.
	{	sorted false
                       ^AlgCocktailSort1:10: error: ')' expected but '}' found.
		}
                ^AlgCocktailSort1:16: error: ')' expected but '}' found.
		}
                ^